--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,10 @@
     <h1>SpotifApi</h1>
     <h3>Choisissez un artiste :</h3>
     <ul>
-        <li><a href="/album/jul"><img class = "home" src="/static/jul.jpg" alt="JUL"/></a></li>
-        <li><a href="/track/sdm"><img class = "home" src="/static/sdm.jpg" alt="SDM"/></a></li>
+        <li><a href="/album/jul"><img class="home" src="/static/jul.jpg" alt="JUL"/></a></li>
+        <li><a href="/track/sdm"><img class="home" src="/static/sdm.jpg" alt="SDM"/></a></li>
     </ul>
+    <!-- Add a logout link -->
+    <p><a href="/logout">Déconnexion</a></p>
 </body>
 </html>
