--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,5 @@
+{{define "login.html"}}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +8,7 @@
     <title>Login</title>
 </head>
 <body>
+    
     <h2>Login</h2>
     <form action="/login" method="post">
         <label for="username">Username:</label>
@@ -19,3 +22,4 @@
     <p>Don't have an account? <a href="/register">Register here</a>.</p>
 </body>
 </html>
+{{end}}
