--- a/templates/register.html
+++ b/templates/register.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
 <body>
-    <h2>Register</h2>
+    <h1>Register</h1>
     <form action="/register" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
@@ -14,10 +15,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
         <br>
-        <!-- Add more fields as needed for user registration -->
-        <br>
-        <button type="submit">Register</button>
+        <input type="submit" value="Register">
     </form>
-    <p>Already have an account? <a href="/login">Login here</a>.</p>
 </body>
 </html>
